--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ section {
     border-radius: 15px;
     border: none;
     background: transparent;
-    color: #14c031;
+    color: #123571;
     cursor: pointer;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
